# oxidized_ga

./: .gitignore  Cargo.toml  README.md  todo.md
oxidized_ga/: __init__.py  wrapper.py
src/: graph.rs  lib.rs  neural_net.rs
src/converter/: mod.rs
src/selector/: mod.rs
